# server/src/index.ts
@@ -9,7 +9,7 @@ import habitacionRoutes from './routes/habitacionRoutes';
 import reservaRoutes from './routes/reservaRoutes';
 
 const app = express();
-const PORT = process.env.PORT || 3000;
+const PORT = process.env.PORT || 3001;
 
 
 
